--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "psr/container": "^2.0"
     },
     "require-dev": {
+        "jetbrains/phpstorm-attributes": "^1.0",
         "pestphp/pest": "^1.21"
     },
     "config": {
